--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -10,6 +10,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 
 body {
@@ -155,7 +156,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    background: url(../img/maplights.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -172,6 +173,7 @@ hr.small {
 
 .services {
     padding: 50px 0;
+    background-color: grey;
 }
 
 .service-item {
@@ -185,7 +187,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    background: url(../img/night_ride.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
