--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -10,7 +10,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-image: url(../img/blackpaper.jpg);
+    background-color: #340600;
 }
 
 body {
@@ -157,7 +157,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/maplights.jpg) no-repeat center center scroll;
+    background: url(../img/waterspring.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -175,11 +175,14 @@ hr.small {
 
 .services {
     padding: 50px 0;
-    background-image: url(../img/crackedglass.jpg);
+    background-image: url(../img/lumberjack.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .service-item {
     margin-bottom: 30px;
+
 }
 
 /* Callout */
@@ -189,7 +192,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/night_ride.jpg) no-repeat center center scroll;
+    background: url(../img/silhouette.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -200,7 +203,7 @@ hr.small {
 
 .portfolio {
     padding: 50px 0;
-    color: purple;
+    color: white;
 }
 
 .portfolio-item {
@@ -209,7 +212,10 @@ hr.small {
 }
 
 .img-portfolio {
-    margin: 0 auto;
+    border-radius: 45px;
+    height: 305px;
+    width: 457px;
+    
 }
 
 .img-portfolio:hover {
@@ -220,7 +226,10 @@ hr.small {
 
 .call-to-action {
     padding: 50px 0;
-    background-image: url(../img/cityrain.jpg);
+    background-image: url(../img/cherry-wood.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 .call-to-action .btn {
@@ -247,7 +256,7 @@ hr.small {
 
 footer {
     padding: 100px 0;
-    background-image: url(../img/wetstreet.jpg);
+    background-image: url(../img/pinetrees.jpg);
     background-repeat: no-repeat;
     background-position: absolute;
     background-size: 100%;
@@ -260,4 +269,12 @@ footer {
   position: fixed;
   bottom: 5px;
   right: 5px;
+}
+
+.icon-nodejs{
+   color: blue;
+
+}
+.icon-javascript{
+    color: blue;
 }
