--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -157,7 +157,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/waterspring.jpg) no-repeat center center scroll;
+    background: url(../img/lumberjack.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -175,7 +175,7 @@ hr.small {
 
 .services {
     padding: 50px 0;
-    background-image: url(../img/lumberjack.jpg);
+    background-image: url(../img/cherry-wood.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -256,11 +256,11 @@ hr.small {
 
 footer {
     padding: 100px 0;
-    background-image: url(../img/pinetrees.jpg);
+  /*  background-image: url(../img/waterfall.jpg);*/
     background-repeat: no-repeat;
     background-position: absolute;
     background-size: 100%;
-    color: red;
+    color: black;
 
 }
 
@@ -277,4 +277,20 @@ footer {
 }
 .icon-javascript{
     color: blue;
+}
+
+#textboxid {
+    height:80px;
+    width: 110px;
+    font-size:14pt;
+}
+#submitbtn{
+   height:50px;
+   width: 70px;
+}
+#contactinfo-border {
+    border-image: url(../img/cherry-wood.jpg); 
+    border-color: black;
+    background-color: #340600;
+    background-color: rgba(0, 0, 0, 0.6);
 }
