--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -272,11 +272,11 @@ footer {
 }
 
 .icon-nodejs{
-   color: blue;
+   color: white;
 
 }
 .icon-javascript{
-    color: blue;
+    color: white;
 }
 
 #textboxid {
